# startup-boilerplate

./: Makefile  pyproject.toml
app/: main.py
app/config/: local.py
app/forms/: item.py  signup.py
app/models/: cart.py  item.py  order.py  project.py  user.py
migrations/versions/: 0da578d03634_.py  9bc497c8258b_.py  c47e011fa03c_.py  f0bd8c9fbce5_.py
templates/: base.html  index.html  item.html  items.html  login.html  profile.html
